<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rotate"
        android:icon="@mipmap/next"
        android:title="@string/app_name"
        app:showAsAction="always" />

    <item
        android:id="@+id/hello_world_som"
        android:orderInCategory="100"
        android:title="@string/hello_world_som"/>
    <item
        android:id="@+id/hello_som"
        android:orderInCategory="200"
        android:title="@string/hello_som"/>
    <item
        android:id="@+id/world_som"
        android:orderInCategory="300"
        android:title="@string/world_som"/>

    <item
        android:id="@+id/action_som"
        android:orderInCategory="400"
        android:title="@string/action_som"/>
    <item
        android:id="@+id/act_som"
        android:orderInCategory="500"
        android:title="@string/act_som"/>

    <item
        android:id="@+id/action_settings_som"
        android:orderInCategory="600"
        android:title="@string/action_settings_som"/>

    <item
        android:id="@+id/set_som"
        android:orderInCategory="700"
        android:title="@string/set_som"/>

    <item
        android:id="@+id/settings_som"
        android:orderInCategory="800"
        android:title="@string/settings_som"/>


    <item
        android:id="@+id/wor_som"
        android:orderInCategory="900"
        android:title="@string/wor_som"/>
    <item
        android:id="@+id/elfo_som"
        android:orderInCategory="1000"
        android:title="@string/elfo_som"/>

    <item
        android:id="@+id/about_som"
        android:orderInCategory="1100"
        android:title="@string/about" />

</menu>